# data-filter

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
examples/: example.csv  example.json  example.xml
src/data-filter/: __init__.py  config.py  main.py
src/data-filter/data_loader/: base_data_loader.py  csv_data_loader.py  factory.py  json_data_loader.py  xml_data_loader.py
src/data-filter/filter/: base_filter.py  csv_filter.py  json_filter.py
src/data-filter/models/data_containers/: csv_data_container.py  json_data_container.py  xml_data_container.py
src/data-filter/sorter/: base_sorter.py  csv_sorter.py  json_sorter.py
src/data-filter/stats/: base_stats.py  csv_stats.py  json_stats.py
