[project]
name = "data-filter"
version = "0.1.0"
description = ""
authors = [
    {name = "Charara",email = "m.charara@ob-soft.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "data-filter",from = "src"}
]
